加上航班資訊查詢與顯示功能

--- a/User/bitrental/ios/Runner/Info.plist
+++ b/User/bitrental/ios/Runner/Info.plist
@@ -47,5 +47,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>我們需要你的位置資訊來提供更好的服務。</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>我們需要你的位置資訊來提供更好的服務。</string>
 </dict>
 </plist>
