--- a/Administrator/admin_management/pubspec.yaml
+++ b/Administrator/admin_management/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Nelson Add
   cloud_firestore: ^4.8.2
   google_maps_flutter: ^2.3.1
+  firebase_core: ^2.14.0
 
 dev_dependencies:
   flutter_test:
