--- a/User/bitrental/pubspec.yaml
+++ b/User/bitrental/pubspec.yaml
@@ -49,8 +49,11 @@ dependencies:
   google_sign_in: ^6.1.4
   firebase_auth: ^4.7.2
   firebase_core: ^2.15.0
+  firebase_database: ^10.2.4
   sqflite: ^2.3.0
   shared_preferences: ^2.2.0
+  permission_handler: ^10.4.3
+  location: ^5.0.1
   
 dev_dependencies:
   flutter_test:
