增加管理者登入按鈕，新增boss_home_page.dart用於管理者登入成功後進入的頁面

--- a/User/bitrental/ios/Runner/Info.plist
+++ b/User/bitrental/ios/Runner/Info.plist
@@ -64,5 +64,13 @@
 	<string></string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>需要存取您的位置資訊來顯示地圖</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>需要存取您的位置資訊來顯示地圖</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>需要存取您的位置資訊來顯示地圖</string>
+	<key>GMSApiKey</key>
+	<string>AIzaSyDBSAOn0WKx5cM0TJ_HNhYXFXjY6ywkas0</string>
 </dict>
 </plist>
