--- a/User/bitrental/pubspec.yaml
+++ b/User/bitrental/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   shared_preferences: ^2.2.0
   permission_handler: ^10.4.3
   location: ^5.0.1
+  flutter_background_geolocation: ^4.11.1
   
 dev_dependencies:
   flutter_test:
