--- a/Driver/bitrental/pubspec.yaml
+++ b/Driver/bitrental/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.2+1
 
 environment:
   sdk: '>=3.2.0-134.1.beta <4.0.0'
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.17.0
+  shared_preferences: ^2.2.2
+  cloud_firestore: ^4.9.3
+  table_calendar: ^3.0.9
+  google_sign_in: ^6.1.5
+  firebase_auth: ^4.10.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +69,20 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+     - images/bitrental.png
+     - assets/background.png
+     - assets/icon_car.png
+     - assets/icon_home.png
+     - assets/icon_fleet.png
+     - assets/icon_calendar.png
+     - assets/icon_activity.png
+     - assets/icon_profile.png
+     - assets/sample_map.png
+     - assets/account.json
+     - assets/car.json
+     - assets/office.json
+     - assets/airport.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
