--- a/Driver/bitrental/pubspec.yaml
+++ b/Driver/bitrental/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^6.1.5
   firebase_auth: ^4.10.1
   intl: ^0.18.1
+  flutter_background_geolocation: ^4.13.5
 
 dev_dependencies:
   flutter_test:
